--- a/current.html
+++ b/current.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-<link rel='stylesheet' href='styles.css'>
+<link rel='stylesheet' href='styles/styles.css'>
 </head>
 <body>
 <table><tr><td><h1>REMAINING TIMES</h1>
