Updating tracker via automation

--- a/current.html
+++ b/current.html
@@ -3,7 +3,8 @@
 <link rel='stylesheet' href='styles/styles.css'>
 </head>
 <body>
-<table><tr><td><h1>REMAINING TIMES</h1>
+<h1>PST TIME EVENT</h1>
+<table><tr><td><h2>REMAINING TIMES</h2>
 <table>
 <thead>
 <tr><th>Time</th></tr>
@@ -1286,7 +1287,7 @@
 <tr><td>23:59</tr></td>
 </tbody>
 </table></td><td>
-<h1>CLAIMED TIMES</h1>
+<h2>CLAIMED TIMES</h2>
 <table>
 <thead>
 <tr><th>Time  </th><th>User         </th><th>Log Num                                                                                    </th></tr>
