Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>PST TIME EVENT</h1>
-<h3>as of 2023-04-06 12:17:38</h3>
+<h3>as of 2023-04-06 16:51:39 UTC</h3>
 <table><tr><td><h2>REMAINING TIMES</h2>
 <table>
 <thead>
@@ -1112,7 +1112,7 @@
 <h2>CLAIMED TIMES</h2>
 <table>
 <thead>
-<tr><th>Time  </th><th>User         </th><th>Log Num                                                                                    </th></tr>
+<tr><th>Time  </th><th>User         </th><th>Log#                                                                                       </th></tr>
 </thead>
 <tbody>
 <tr><td>00:03 </td><td>Blood_Velvet </td><td><a href="https://www.playstationtrophies.org/profiles/Blood_Velvet/log?id=22965">22965</a> </td></tr>
