--- a/tracker.html
+++ b/tracker.html
@@ -3,9 +3,13 @@
 <link rel='stylesheet' href='styles/styles.css'>
 </head>
 <body>
+<script src='js/script.js'></script>
 <h1>PST TIME EVENT</h1>
-<h3>as of 2023-04-06 17:05:15 UTC</h3>
-<table><tr><td><h2>REMAINING TIMES</h2>
+<h3>as of 2023-04-06 17:40:45 UTC</h3>
+<div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
+<button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
+<button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button></div>
+<div id="remaining" class="tabcontent" style="display:block"><h2>REMAINING TIMES</h2>
 <table>
 <thead>
 <tr><th>Time</th></tr>
@@ -1108,7 +1112,9 @@
 <tr><td>23:57</tr></td>
 <tr><td>23:58</tr></td>
 </tbody>
-</table></td><td>
+</table>
+</div>
+<div id="claimed" class="tabcontent">
 <h2>CLAIMED TIMES</h2>
 <table>
 <thead>
@@ -1461,4 +1467,4 @@
 <tr><td>23:59 </td><td>slammajamma28</td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15523">15523</a></td></tr>
 </tbody>
 </table>
-</td></tr></body>
+</div></body>
