Added community goal LB

--- a/tracker.html
+++ b/tracker.html
@@ -5,8 +5,8 @@
 <body>
 <script src='js/script.js'></script>
 <h1>PST TIME EVENT</h1>
-<h3>as of 2023-04-06 17:40:45 UTC</h3>
-<div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
+<h3>as of 2023-04-26 11:36:23 UTC</h3>
+<div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org'>discussion thread</a> if you see any discrepancies and for further rules.</div><br><div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button></div>
 <div id="remaining" class="tabcontent" style="display:block"><h2>REMAINING TIMES</h2>
@@ -1467,4 +1467,21 @@
 <tr><td>23:59 </td><td>slammajamma28</td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15523">15523</a></td></tr>
 </tbody>
 </table>
-</div></body>
+</div>
+<div id="leaderboard" class="tabcontent">
+<h2>LEADERBOARD</h2>
+<table>
+<thead>
+<tr><th>User         </th><th style="text-align: right;">  Count</th></tr>
+</thead>
+<tbody>
+<tr><td>Blood_Velvet </td><td style="text-align: right;">    140</td></tr>
+<tr><td>slammajamma28</td><td style="text-align: right;">    132</td></tr>
+<tr><td>Road2unner   </td><td style="text-align: right;">     19</td></tr>
+<tr><td>XxDecieverxX </td><td style="text-align: right;">      4</td></tr>
+<tr><td>Zetberg      </td><td style="text-align: right;">      3</td></tr>
+<tr><td>staytrue1985 </td><td style="text-align: right;">     46</td></tr>
+</tbody>
+</table>
+</div>
+</body>
