--- a/tracker.html
+++ b/tracker.html
@@ -4,7 +4,7 @@
 </head>
 <body>
 <script src='js/script.js'></script>
-<h1>PST TIME EVENT</h1>
+<img src="banner.png" alt="PST TIME EVENT">
 <h3>as of 2023-04-26 18:04:19 UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org'>discussion thread</a> if you see any discrepancies and for further rules.</div><br><div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
