--- a/tracker.html
+++ b/tracker.html
@@ -5,8 +5,8 @@
 <body>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 02:32:08 AM UTC</h3>
-<h4>as of 2023/05/01 02:32:08 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 02:37:24 AM UTC</h3>
+<h4>as of 2023/05/01 02:37:24 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
@@ -63,14 +63,12 @@
 <tr><td>00:42</tr></td>
 <tr><td>00:43</tr></td>
 <tr><td>00:44</tr></td>
-<tr><td>00:45</tr></td>
 <tr><td>00:46</tr></td>
 <tr><td>00:47</tr></td>
 <tr><td>00:48</tr></td>
 <tr><td>00:49</tr></td>
 <tr><td>00:50</tr></td>
 <tr><td>00:51</tr></td>
-<tr><td>00:52</tr></td>
 <tr><td>00:53</tr></td>
 <tr><td>00:54</tr></td>
 <tr><td>00:55</tr></td>
@@ -90,13 +88,11 @@
 <tr><td>01:09</tr></td>
 <tr><td>01:10</tr></td>
 <tr><td>01:11</tr></td>
-<tr><td>01:12</tr></td>
 <tr><td>01:13</tr></td>
 <tr><td>01:14</tr></td>
 <tr><td>01:15</tr></td>
 <tr><td>01:16</tr></td>
 <tr><td>01:17</tr></td>
-<tr><td>01:18</tr></td>
 <tr><td>01:19</tr></td>
 <tr><td>01:20</tr></td>
 <tr><td>01:21</tr></td>
@@ -126,7 +122,6 @@
 <tr><td>01:45</tr></td>
 <tr><td>01:46</tr></td>
 <tr><td>01:47</tr></td>
-<tr><td>01:48</tr></td>
 <tr><td>01:49</tr></td>
 <tr><td>01:50</tr></td>
 <tr><td>01:51</tr></td>
@@ -158,7 +153,6 @@
 <tr><td>02:17</tr></td>
 <tr><td>02:18</tr></td>
 <tr><td>02:19</tr></td>
-<tr><td>02:20</tr></td>
 <tr><td>02:21</tr></td>
 <tr><td>02:22</tr></td>
 <tr><td>02:23</tr></td>
@@ -1465,10 +1459,16 @@
 <h2>CLAIMED TIMES</h2>
 <table>
 <thead>
-<tr><th>Time  </th><th>User      </th><th>Log#                                                                                    </th><th style="text-align: right;">  Rarity</th></tr>
+<tr><th>Time  </th><th>User         </th><th>Log#                                                                                       </th><th style="text-align: right;">  Rarity</th></tr>
 </thead>
 <tbody>
-<tr><td>00:05 </td><td>Road2unner</td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19117">19117</a></td><td style="text-align: right;">   15.43</td></tr>
+<tr><td>00:05 </td><td>Road2unner   </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19117">19117</a>   </td><td style="text-align: right;">   15.43</td></tr>
+<tr><td>00:45 </td><td>slammajamma28</td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15803">15803</a></td><td style="text-align: right;">   81.78</td></tr>
+<tr><td>00:52 </td><td>slammajamma28</td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15804">15804</a></td><td style="text-align: right;">   72.1 </td></tr>
+<tr><td>01:12 </td><td>slammajamma28</td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15805">15805</a></td><td style="text-align: right;">   71.41</td></tr>
+<tr><td>01:18 </td><td>slammajamma28</td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15806">15806</a></td><td style="text-align: right;">   59.28</td></tr>
+<tr><td>01:48 </td><td>slammajamma28</td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15807">15807</a></td><td style="text-align: right;">   38.39</td></tr>
+<tr><td>02:20 </td><td>slammajamma28</td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15808">15808</a></td><td style="text-align: right;">   61.44</td></tr>
 </tbody>
 </table>
 </div>
@@ -1476,10 +1476,11 @@
 <h2>LEADERBOARD</h2>
 <table>
 <thead>
-<tr><th>User      </th><th style="text-align: right;">  Count</th></tr>
+<tr><th>User         </th><th style="text-align: right;">  Count</th></tr>
 </thead>
 <tbody>
-<tr><td>Road2unner</td><td style="text-align: right;">      1</td></tr>
+<tr><td>slammajamma28</td><td style="text-align: right;">      6</td></tr>
+<tr><td>Road2unner   </td><td style="text-align: right;">      1</td></tr>
 </tbody>
 </table>
 </div>
@@ -1494,6 +1495,7 @@
 <button onclick="showUser(event, 'Road2unner')">Road2unner</button><br>
 <button onclick="showUser(event, 'slammajamma28')">slammajamma28</button><br>
 <button onclick="showUser(event, 'THE--ALCHEMlST')">THE--ALCHEMlST</button><br>
+<button onclick="showUser(event, 'XxDecieverxX')">XxDecieverxX</button><br>
 <button onclick="showUser(event, 'Zetberg')">Zetberg</button><br>
 </div></div><h2>INDIVIDUAL GOALS</h2>
 <div id="Barra333" class="user_table" style="display:none">
@@ -1907,6 +1909,74 @@
 <div id="slammajamma28" class="user_table" style="display:none">
 <table>
 <thead>
+<tr><th>Log#                                                                                       </th><th>Rarity  </th><th style="text-align: right;">  Seconds</th></tr>
+</thead>
+<tbody>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       00</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       01</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15807">15807</a></td><td>38.39   </td><td style="text-align: right;">       04</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       05</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       07</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       08</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       09</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       10</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       12</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       13</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       15</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       16</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15808">15808</a></td><td>61.44   </td><td style="text-align: right;">       17</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       18</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       19</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       20</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       21</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       22</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       23</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       24</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       25</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       26</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15803">15803</a></td><td>81.78   </td><td style="text-align: right;">       28</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       29</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       30</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       32</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       33</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       37</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       39</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       40</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       41</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       42</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15804">15804</a></td><td>72.10   </td><td style="text-align: right;">       43</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       45</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       47</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       48</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       50</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       51</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       52</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       54</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       57</td></tr>
+<tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       58</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15806">15806</a></td><td>59.28   </td><td style="text-align: right;">       59</td></tr>
+</tbody>
+</table></div>
+<div id="THE--ALCHEMlST" class="user_table" style="display:none">
+<table>
+<thead>
 <tr><th>Log#   </th><th>Rarity  </th><th style="text-align: right;">  Seconds</th></tr>
 </thead>
 <tbody>
@@ -1972,7 +2042,7 @@
 <tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       59</td></tr>
 </tbody>
 </table></div>
-<div id="THE--ALCHEMlST" class="user_table" style="display:none">
+<div id="XxDecieverxX" class="user_table" style="display:none">
 <table>
 <thead>
 <tr><th>Log#   </th><th>Rarity  </th><th style="text-align: right;">  Seconds</th></tr>
