--- a/tracker.html
+++ b/tracker.html
@@ -5,8 +5,8 @@
 <body>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 03:00:01 AM UTC</h3>
-<h4>as of 2023/05/01 03:00:01 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 03:28:58 AM UTC</h3>
+<h4>as of 2023/05/01 03:28:58 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
@@ -1490,6 +1490,7 @@
 <button onclick="showUser(event, 'Barra333')">Barra333</button><br>
 <button onclick="showUser(event, 'Blood_Velvet')">Blood_Velvet</button><br>
 <button onclick="showUser(event, 'danc97-')">danc97-</button><br>
+<button onclick="showUser(event, 'Dino_Roar')">Dino_Roar</button><br>
 <button onclick="showUser(event, 'diskdocx')">diskdocx</button><br>
 <button onclick="showUser(event, 'mattigummi')">mattigummi</button><br>
 <button onclick="showUser(event, 'Road2unner')">Road2unner</button><br>
@@ -1635,6 +1636,74 @@
 </tbody>
 </table></div>
 <div id="danc97-" class="user_table" style="display:none">
+<table>
+<thead>
+<tr><th>Log#   </th><th>Rarity  </th><th style="text-align: right;">  Seconds</th></tr>
+</thead>
+<tbody>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       00</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       01</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       05</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       07</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       08</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       09</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       10</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       12</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       13</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       15</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       16</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       17</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       18</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       19</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       20</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       21</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       22</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       23</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       24</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       25</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       26</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       28</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       29</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       30</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       32</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       33</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       37</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       39</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       40</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       41</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       42</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       43</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       45</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       47</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       48</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       50</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       51</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       52</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       54</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       57</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       58</td></tr>
+<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       59</td></tr>
+</tbody>
+</table></div>
+<div id="Dino_Roar" class="user_table" style="display:none">
 <table>
 <thead>
 <tr><th>Log#   </th><th>Rarity  </th><th style="text-align: right;">  Seconds</th></tr>
