Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -5,8 +5,8 @@
 <body>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 12:00:02 PM UTC</h3>
-<h4>as of 2023/05/01 12:00:02 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 01:00:02 PM UTC</h3>
+<h4>as of 2023/05/01 01:00:02 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
@@ -730,7 +730,6 @@
 <tr><td>12:07</tr></td>
 <tr><td>12:08</tr></td>
 <tr><td>12:09</tr></td>
-<tr><td>12:10</tr></td>
 <tr><td>12:11</tr></td>
 <tr><td>12:12</tr></td>
 <tr><td>12:13</tr></td>
@@ -780,7 +779,6 @@
 <tr><td>12:57</tr></td>
 <tr><td>12:58</tr></td>
 <tr><td>12:59</tr></td>
-<tr><td>13:00</tr></td>
 <tr><td>13:01</tr></td>
 <tr><td>13:02</tr></td>
 <tr><td>13:03</tr></td>
@@ -1469,6 +1467,8 @@
 <tr><td>08:01 </td><td>Dolken_swe   </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18885">18885</a>   </td><td style="text-align: right;">   18.24</td></tr>
 <tr><td>08:55 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14862">14862</a> </td><td style="text-align: right;">   43.95</td></tr>
 <tr><td>09:14 </td><td>staytrue1985 </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14863">14863</a> </td><td style="text-align: right;">   41   </td></tr>
+<tr><td>12:10 </td><td>Road2unner   </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19118">19118</a>   </td><td style="text-align: right;">    6.36</td></tr>
+<tr><td>13:00 </td><td>Road2unner   </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19119">19119</a>   </td><td style="text-align: right;">   14.66</td></tr>
 </tbody>
 </table>
 </div>
@@ -1481,8 +1481,8 @@
 <tbody>
 <tr><td>Jerry_Appleby</td><td style="text-align: right;">      8</td></tr>
 <tr><td>slammajamma28</td><td style="text-align: right;">      6</td></tr>
+<tr><td>Road2unner   </td><td style="text-align: right;">      3</td></tr>
 <tr><td>staytrue1985 </td><td style="text-align: right;">      2</td></tr>
-<tr><td>Road2unner   </td><td style="text-align: right;">      1</td></tr>
 <tr><td>Barra333     </td><td style="text-align: right;">      1</td></tr>
 <tr><td>Dolken_swe   </td><td style="text-align: right;">      1</td></tr>
 </tbody>
@@ -2545,7 +2545,7 @@
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       01</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
-<tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19118">19118</a></td><td>6.36    </td><td style="text-align: right;">       04</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       05</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       07</td></tr>
@@ -2553,7 +2553,7 @@
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       09</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       10</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
-<tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       12</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19119">19119</a></td><td>14.66   </td><td style="text-align: right;">       12</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       13</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       15</td></tr>
