Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -5,8 +5,8 @@
 <body>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 10:44:46 PM UTC</h3>
-<h4>as of 2023/05/01 10:44:46 PM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/01 11:44:46 PM UTC</h3>
+<h4>as of 2023/05/01 11:44:46 PM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
@@ -1155,7 +1155,6 @@
 <tr><td>20:54</tr></td>
 <tr><td>20:55</tr></td>
 <tr><td>20:56</tr></td>
-<tr><td>20:57</tr></td>
 <tr><td>20:58</tr></td>
 <tr><td>20:59</tr></td>
 <tr><td>21:00</tr></td>
@@ -1468,6 +1467,7 @@
 <tr><td>20:21 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13208">13208</a>       </td><td style="text-align: right;">   97.02</td></tr>
 <tr><td>20:28 </td><td>Martz4040       </td><td><a href="https://www.playstationtrophies.org/profiles/Martz4040/log?id=13209">13209</a>       </td><td style="text-align: right;">   96.84</td></tr>
 <tr><td>20:36 </td><td>Ryukori_        </td><td><a href="https://www.playstationtrophies.org/profiles/Ryukori_/log?id=13725">13725</a>        </td><td style="text-align: right;">   51.61</td></tr>
+<tr><td>20:57 </td><td>sum1_worsethan_u</td><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13407">13407</a></td><td style="text-align: right;">   93.96</td></tr>
 <tr><td>22:07 </td><td>Road2unner      </td><td><a href="https://www.playstationtrophies.org/profiles/Road2unner/log?id=19124">19124</a>      </td><td style="text-align: right;">    4.54</td></tr>
 </tbody>
 </table>
@@ -1493,6 +1493,7 @@
 <tr><td>clayser         </td><td style="text-align: right;">      4</td></tr>
 <tr><td>Barra333        </td><td style="text-align: right;">      1</td></tr>
 <tr><td>Ryukori_        </td><td style="text-align: right;">      1</td></tr>
+<tr><td>sum1_worsethan_u</td><td style="text-align: right;">      1</td></tr>
 </tbody>
 </table>
 </div>
@@ -3095,69 +3096,69 @@
 <div id="sum1_worsethan_u" class="user_table" style="display:none">
 <table>
 <thead>
-<tr><th>Log#   </th><th>Rarity  </th><th style="text-align: right;">  Seconds</th></tr>
+<tr><th>Log#                                                                                          </th><th>Rarity  </th><th style="text-align: right;">  Seconds</th></tr>
 </thead>
 <tbody>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       00</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       01</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       05</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       07</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       08</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       09</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       10</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       12</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       13</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       15</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       16</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       17</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       18</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       19</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       20</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       21</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       22</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       23</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       24</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       25</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       26</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       28</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       29</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       30</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       32</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       33</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       37</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       39</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       40</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       41</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       42</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       43</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       45</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       47</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       48</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       50</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       51</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       52</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       54</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       57</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       58</td></tr>
-<tr><td>MISSING</td><td>MISSING </td><td style="text-align: right;">       59</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       00</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       01</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       02</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       03</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       04</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       05</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       06</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       07</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       08</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       09</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       10</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       11</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       12</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       13</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       14</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       15</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       16</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       17</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       18</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       19</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       20</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       21</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       22</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       23</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       24</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       25</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       26</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       27</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       28</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       29</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       30</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       32</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       33</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       37</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       39</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       40</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       41</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       42</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       43</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       45</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       47</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       48</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       50</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       51</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       52</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/sum1_worsethan_u/log?id=13407">13407</a></td><td>93.96   </td><td style="text-align: right;">       54</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       57</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       58</td></tr>
+<tr><td>MISSING                                                                                       </td><td>MISSING </td><td style="text-align: right;">       59</td></tr>
 </tbody>
 </table></div>
 <div id="THE--ALCHEMlST" class="user_table" style="display:none">
