--- a/tracker.html
+++ b/tracker.html
@@ -5,8 +5,8 @@
 <body>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/02 05:44:46 AM UTC</h3>
-<h4>as of 2023/05/02 05:44:46 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/02 06:44:46 AM UTC</h3>
+<h4>as of 2023/05/02 06:44:46 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
@@ -282,7 +282,6 @@
 <tr><td>05:02</tr></td>
 <tr><td>05:04</tr></td>
 <tr><td>05:05</tr></td>
-<tr><td>05:06</tr></td>
 <tr><td>05:07</tr></td>
 <tr><td>05:08</tr></td>
 <tr><td>05:09</tr></td>
@@ -1306,6 +1305,7 @@
 <tr><td>04:18 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32548">32548</a>   </td><td style="text-align: right;">   11.57</td></tr>
 <tr><td>04:21 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32550">32550</a>   </td><td style="text-align: right;">   14.78</td></tr>
 <tr><td>05:03 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32534">32534</a>   </td><td style="text-align: right;">    2.86</td></tr>
+<tr><td>05:06 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32551">32551</a>   </td><td style="text-align: right;">   77.74</td></tr>
 <tr><td>05:16 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32535">32535</a>   </td><td style="text-align: right;">    3.49</td></tr>
 <tr><td>05:37 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32536">32536</a>   </td><td style="text-align: right;">    2.59</td></tr>
 <tr><td>05:57 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32537">32537</a>   </td><td style="text-align: right;">   34.28</td></tr>
@@ -1374,13 +1374,13 @@
 <tr><td>16:03 </td><td>Da-Eastside     </td><td><a href="https://www.playstationtrophies.org/profiles/Da-Eastside/log?id=45219">45219</a>     </td><td style="text-align: right;">   63.28</td></tr>
 <tr><td>16:11 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40314">40314</a>       </td><td style="text-align: right;">   52.87</td></tr>
 <tr><td>16:23 </td><td>Hemming87       </td><td><a href="https://www.playstationtrophies.org/profiles/Hemming87/log?id=40315">40315</a>       </td><td style="text-align: right;">   49.96</td></tr>
-<tr><td>16:37 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18886">18886</a>      </td><td style="text-align: right;">   65.5 </td></tr>
-<tr><td>16:38 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18888">18888</a>      </td><td style="text-align: right;">   76.54</td></tr>
+<tr><td>16:37 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18886">18886</a>      </td><td style="text-align: right;">   65.51</td></tr>
+<tr><td>16:38 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18888">18888</a>      </td><td style="text-align: right;">   76.53</td></tr>
 <tr><td>16:40 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18889">18889</a>      </td><td style="text-align: right;">   76.59</td></tr>
-<tr><td>16:46 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18890">18890</a>      </td><td style="text-align: right;">   52.26</td></tr>
-<tr><td>16:48 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18891">18891</a>      </td><td style="text-align: right;">   46.95</td></tr>
-<tr><td>16:55 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18892">18892</a>      </td><td style="text-align: right;">   53.4 </td></tr>
-<tr><td>17:00 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18893">18893</a>      </td><td style="text-align: right;">   37.98</td></tr>
+<tr><td>16:46 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18890">18890</a>      </td><td style="text-align: right;">   52.27</td></tr>
+<tr><td>16:48 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18891">18891</a>      </td><td style="text-align: right;">   46.98</td></tr>
+<tr><td>16:55 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18892">18892</a>      </td><td style="text-align: right;">   53.43</td></tr>
+<tr><td>17:00 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18893">18893</a>      </td><td style="text-align: right;">   37.99</td></tr>
 <tr><td>17:14 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18894">18894</a>      </td><td style="text-align: right;">   18.33</td></tr>
 <tr><td>17:16 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23613">23613</a>  </td><td style="text-align: right;">   92.16</td></tr>
 <tr><td>17:19 </td><td>THE--ALCHEMlST  </td><td><a href="https://www.playstationtrophies.org/profiles/THE--ALCHEMlST/log?id=23614">23614</a>  </td><td style="text-align: right;">   85.78</td></tr>
@@ -1481,7 +1481,7 @@
 <tbody>
 <tr><td>wrestlefanatic77</td><td style="text-align: right;">     78</td></tr>
 <tr><td>Hemming87       </td><td style="text-align: right;">     18</td></tr>
-<tr><td>Jerry_Appleby   </td><td style="text-align: right;">     15</td></tr>
+<tr><td>Jerry_Appleby   </td><td style="text-align: right;">     16</td></tr>
 <tr><td>THE--ALCHEMlST  </td><td style="text-align: right;">     14</td></tr>
 <tr><td>staytrue1985    </td><td style="text-align: right;">     12</td></tr>
 <tr><td>Darth_Krid      </td><td style="text-align: right;">     10</td></tr>
@@ -2186,28 +2186,28 @@
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18891">18891</a></td><td>46.95   </td><td style="text-align: right;">       37</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18891">18891</a></td><td>46.98   </td><td style="text-align: right;">       37</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       39</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       40</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       41</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18887">18887</a></td><td>87.33   </td><td style="text-align: right;">       42</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18888">18888</a></td><td>76.54   </td><td style="text-align: right;">       43</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18887">18887</a></td><td>87.32   </td><td style="text-align: right;">       42</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18888">18888</a></td><td>76.53   </td><td style="text-align: right;">       43</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       44</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18892">18892</a></td><td>53.40   </td><td style="text-align: right;">       45</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18892">18892</a></td><td>53.43   </td><td style="text-align: right;">       45</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       46</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       47</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       48</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       49</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       50</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18890">18890</a></td><td>52.26   </td><td style="text-align: right;">       51</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18890">18890</a></td><td>52.27   </td><td style="text-align: right;">       51</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       52</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       53</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       54</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       55</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       56</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18893">18893</a></td><td>37.98   </td><td style="text-align: right;">       57</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18886">18886</a></td><td>65.50   </td><td style="text-align: right;">       58</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18893">18893</a></td><td>37.99   </td><td style="text-align: right;">       57</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18886">18886</a></td><td>65.51   </td><td style="text-align: right;">       58</td></tr>
 <tr><td>MISSING                                                                                 </td><td>MISSING </td><td style="text-align: right;">       59</td></tr>
 </tbody>
 </table></div>
