Updating tracker via automation

--- a/tracker.html
+++ b/tracker.html
@@ -5,8 +5,8 @@
 <body>
 <script src='js/script.js'></script>
 <img src="banner.png" alt="PST TIME EVENT">
-<h3 value="utc" onClick="swapTime(event)">as of 2023/05/02 06:44:46 AM UTC</h3>
-<h4>as of 2023/05/02 06:44:46 AM UTC</h3>
+<h3 value="utc" onClick="swapTime(event)">as of 2023/05/02 07:44:46 AM UTC</h3>
+<h4>as of 2023/05/02 07:44:46 AM UTC</h3>
 <div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
@@ -106,7 +106,6 @@
 <tr><td>01:49</tr></td>
 <tr><td>01:51</tr></td>
 <tr><td>01:52</tr></td>
-<tr><td>01:53</tr></td>
 <tr><td>01:54</tr></td>
 <tr><td>01:55</tr></td>
 <tr><td>01:56</tr></td>
@@ -1288,6 +1287,7 @@
 <tr><td>01:18 </td><td>slammajamma28   </td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15806">15806</a>   </td><td style="text-align: right;">   59.27</td></tr>
 <tr><td>01:48 </td><td>slammajamma28   </td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15807">15807</a>   </td><td style="text-align: right;">   38.4 </td></tr>
 <tr><td>01:50 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30215">30215</a>      </td><td style="text-align: right;">   83.34</td></tr>
+<tr><td>01:53 </td><td>diskdocx        </td><td><a href="https://www.playstationtrophies.org/profiles/diskdocx/log?id=54518">54518</a>        </td><td style="text-align: right;">   54.55</td></tr>
 <tr><td>02:04 </td><td>slammajamma28   </td><td><a href="https://www.playstationtrophies.org/profiles/slammajamma28/log?id=15809">15809</a>   </td><td style="text-align: right;">   55.3 </td></tr>
 <tr><td>02:06 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30216">30216</a>      </td><td style="text-align: right;">   78.88</td></tr>
 <tr><td>02:14 </td><td>Darth_Krid      </td><td><a href="https://www.playstationtrophies.org/profiles/Darth_Krid/log?id=30218">30218</a>      </td><td style="text-align: right;">   73.16</td></tr>
@@ -1311,7 +1311,7 @@
 <tr><td>05:57 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32537">32537</a>   </td><td style="text-align: right;">   34.28</td></tr>
 <tr><td>05:59 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32538">32538</a>   </td><td style="text-align: right;">   41.92</td></tr>
 <tr><td>06:20 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32539">32539</a>   </td><td style="text-align: right;">   11.95</td></tr>
-<tr><td>06:53 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32540">32540</a>   </td><td style="text-align: right;">   11.29</td></tr>
+<tr><td>06:53 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32540">32540</a>   </td><td style="text-align: right;">   11.3 </td></tr>
 <tr><td>06:58 </td><td>Jerry_Appleby   </td><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32542">32542</a>   </td><td style="text-align: right;">   16.91</td></tr>
 <tr><td>08:01 </td><td>Dolken_swe      </td><td><a href="https://www.playstationtrophies.org/profiles/Dolken_swe/log?id=18885">18885</a>      </td><td style="text-align: right;">   18.23</td></tr>
 <tr><td>08:55 </td><td>staytrue1985    </td><td><a href="https://www.playstationtrophies.org/profiles/staytrue1985/log?id=14862">14862</a>    </td><td style="text-align: right;">   43.95</td></tr>
@@ -1490,8 +1490,8 @@
 <tr><td>Road2unner      </td><td style="text-align: right;">      8</td></tr>
 <tr><td>slammajamma28   </td><td style="text-align: right;">      8</td></tr>
 <tr><td>Da-Eastside     </td><td style="text-align: right;">      6</td></tr>
+<tr><td>diskdocx        </td><td style="text-align: right;">      5</td></tr>
 <tr><td>mattigummi      </td><td style="text-align: right;">      5</td></tr>
-<tr><td>diskdocx        </td><td style="text-align: right;">      4</td></tr>
 <tr><td>Barra333        </td><td style="text-align: right;">      4</td></tr>
 <tr><td>clayser         </td><td style="text-align: right;">      4</td></tr>
 <tr><td>Ryukori_        </td><td style="text-align: right;">      1</td></tr>
@@ -2116,7 +2116,7 @@
 <tr><td>MISSING                                                                               </td><td>MISSING </td><td style="text-align: right;">       32</td></tr>
 <tr><td>MISSING                                                                               </td><td>MISSING </td><td style="text-align: right;">       33</td></tr>
 <tr><td>MISSING                                                                               </td><td>MISSING </td><td style="text-align: right;">       34</td></tr>
-<tr><td>MISSING                                                                               </td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/diskdocx/log?id=54518">54518</a></td><td>54.55   </td><td style="text-align: right;">       35</td></tr>
 <tr><td>MISSING                                                                               </td><td>MISSING </td><td style="text-align: right;">       36</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/diskdocx/log?id=54517">54517</a></td><td>63.80   </td><td style="text-align: right;">       37</td></tr>
 <tr><td>MISSING                                                                               </td><td>MISSING </td><td style="text-align: right;">       38</td></tr>
@@ -2387,7 +2387,7 @@
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       31</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       32</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       33</td></tr>
-<tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32540">32540</a></td><td>11.29   </td><td style="text-align: right;">       34</td></tr>
+<tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32540">32540</a></td><td>11.30   </td><td style="text-align: right;">       34</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       35</td></tr>
 <tr><td><a href="https://www.playstationtrophies.org/profiles/Jerry_Appleby/log?id=32543">32543</a></td><td>30.08   </td><td style="text-align: right;">       36</td></tr>
 <tr><td>MISSING                                                                                    </td><td>MISSING </td><td style="text-align: right;">       37</td></tr>
