Update discussion thread link

--- a/tracker.html
+++ b/tracker.html
@@ -7,7 +7,7 @@
 <img src="banner.png" alt="PST TIME EVENT">
 <h3 value="utc" onClick="swapTime(event)">as of 2023/05/02 11:44:46 AM UTC</h3>
 <h4>as of 2023/05/02 11:44:46 AM UTC</h3>
-<div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
+<div>Times are tracked and claimed automatically.<br>Post in the <a href='https://www.playstationtrophies.org/forum/topic/334336-wait-a-minute-~-discussion/'>discussion thread</a> if you see any discrepancies and for further rules.</div><br>
 <div class="tab"><button class="tablinks active" onclick="openTab(event, 'remaining')">Remaining</button>
 <button class="tablinks" onclick="openTab(event, 'claimed')">Claimed</button>
 <button class="tablinks" onclick="openTab(event, 'leaderboard')">LB</button>
